@@ -1,1 +1,5 @@
 .git
+*.Rhistory
+Makefile
+README.md
+
